trybuild_tests/tests/trybuild/fail/model_optional_fkey.stderr
error[E0277]: the trait bound `Blog: DataObject` is not satisfied
  --> tests/trybuild/fail/model_optional_fkey.rs:8:18
   |
 8 |     blog: Option<butane::ForeignKey<Blog>>,
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `DataObject` is not implemented for `Blog`
  --> tests/trybuild/fail/model_optional_fkey.rs:11:1
   |
11 | struct Blog {
   | ^^^^^^^^^^^
   = help: the trait `DataObject` is implemented for `Post`
note: required by a bound in `ForeignKey`
  --> $WORKSPACE/butane_core/src/fkey.rs
   |
   | pub struct ForeignKey<T>
   |            ---------- required by a bound in this struct
   | where
   |     T: DataObject,
   |        ^^^^^^^^^^ required by this bound in `ForeignKey`

error[E0277]: the trait bound `Blog: DataObject` is not satisfied
  --> tests/trybuild/fail/model_optional_fkey.rs:8:11
   |
 8 |     blog: Option<butane::ForeignKey<Blog>>,
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `DataObject` is not implemented for `Blog`
  --> tests/trybuild/fail/model_optional_fkey.rs:11:1
   |
11 | struct Blog {
   | ^^^^^^^^^^^
   = help: the trait `DataObject` is implemented for `Post`
note: required by a bound in `ForeignKey`
  --> $WORKSPACE/butane_core/src/fkey.rs
   |
   | pub struct ForeignKey<T>
   |            ---------- required by a bound in this struct
   | where
   |     T: DataObject,
   |        ^^^^^^^^^^ required by this bound in `ForeignKey`

error[E0277]: the trait bound `Blog: DataObject` is not satisfied
  --> tests/trybuild/fail/model_optional_fkey.rs:4:1
   |
 4 | #[model]
   | ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `DataObject` is not implemented for `Blog`
  --> tests/trybuild/fail/model_optional_fkey.rs:11:1
   |
11 | struct Blog {
   | ^^^^^^^^^^^
   = help: the trait `DataObject` is implemented for `Post`
note: required by a bound in `ForeignKey`
  --> $WORKSPACE/butane_core/src/fkey.rs
   |
   | pub struct ForeignKey<T>
   |            ---------- required by a bound in this struct
   | where
   |     T: DataObject,
   |        ^^^^^^^^^^ required by this bound in `ForeignKey`
   = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `new` exists for struct `FieldExpr<Option<ForeignKey<Blog>>>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/model_optional_fkey.rs:4:1
   |
 4 | #[model]
   | ^^^^^^^^ function or associated item cannot be called on `FieldExpr<Option<ForeignKey<Blog>>>` due to unsatisfied trait bounds
...
11 | struct Blog {
   | ----------- doesn't satisfy `Blog: DataObject`
   |
   = note: the following trait bounds were not satisfied:
           `Blog: DataObject`
           which is required by `Option<ForeignKey<Blog>>: Into<SqlVal>`
note: the trait `DataObject` must be implemented
  --> $WORKSPACE/butane_core/src/lib.rs
   |
   | pub trait DataObject: DataResult<DBO = Self> + internal::DataObjectInternal + Sync {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
